--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -118,13 +118,13 @@ p {
     -moz-user-select: none;
     -ms-user-select: none;
     user-select: none;
-    border: 2px solid #f14836;
+    border: 2px solid #666363;
     padding: 0 30px;
     font-size: 16px;
     height: 55px;
     line-height: 51px;
     border-radius: 50px;
-    color: #fff;
+    color: #000000;
     cursor: pointer;
     z-index: 5;
     -webkit-transition: all .4s ease-out 0s;
@@ -132,30 +132,30 @@ p {
     -ms-transition: all .4s ease-out 0s;
     -o-transition: all .4s ease-out 0s;
     transition: all .4s ease-out 0s;
-    background-color: #f14836
+    background-color: #6F6F6F
 }
 
 .main-btn:hover {
-    background-color: rgba(241, 72, 54, .3);
-    color: #f14836;
-    border-color: #f14836
+    background-color: rgba(77, 77, 77, 0.3);
+    color: #545454;
+    border-color: #5d5d5d
 }
 
 .main-btn.main-btn-2 {
     background-color: #fff;
-    color: #f14836;
-    border-color: #f14836
+    color: #4a4a4a;
+    border-color: #454545
 }
 
 .main-btn.main-btn-2:hover {
     background-color: rgba(241, 72, 54, .3);
-    border-color: #f14836
+    border-color: #6F6F6F
 }
 
 .section-title .sub-title {
     font-size: 18px;
     font-weight: 400;
-    color: #f14836;
+    color: #6F6F6F;
     text-transform: uppercase
 }
 
@@ -267,7 +267,7 @@ p {
     width: 200%;
     height: 100%;
     border-style: solid;
-    border-color: #f14836 #f14836 #dedede4f;
+    border-color: #6F6F6F #6F6F6F #dedede4f;
     border-radius: 50%;
     border-width: 6px
 }
@@ -709,7 +709,7 @@ p {
 
 .navbar-nav .nav-item.active>a,
 .navbar-nav .nav-item:hover>a {
-    color: #f14836
+    color: #fff9f9
 }
 
 .navbar-nav .nav-item:hover .sub-menu {
@@ -782,7 +782,7 @@ p {
 .navbar-nav .nav-item .sub-menu li a.active,
 .navbar-nav .nav-item .sub-menu li a:hover {
     padding-left: 25px;
-    color: #f14836
+    color: #6F6F6F
 }
 
 .navbar-nav .sub-nav-toggler {
@@ -870,7 +870,8 @@ p {
 
 .header-hero {
     height: 800px;
-    position: relative
+    position: relative;
+    background-color: #6F6F6F;
 }
 
 @media only screen and (min-width:1400px) {
@@ -970,7 +971,7 @@ p {
 }
 
 .header-hero-content .hero-title span {
-    color: #f14836;
+    color: #fdfdfd;
     display: contents
 }
 
@@ -1057,7 +1058,7 @@ p {
     font-weight: 400;
     text-transform: uppercase;
     letter-spacing: 5px;
-    color: #f14836;
+    color: #7e7e7e;
     font-family: nunito, sans-serif
 }
 
@@ -1174,14 +1175,14 @@ p {
 
 .single-counter.counter-color-3 .counter-shape .shape-1,
 .single-counter.counter-color-3 .counter-shape .shape-2 {
-    background: -webkit-linear-gradient(left, #f14836 0%, #ff9387 100%);
-    background: -o-linear-gradient(left, #f14836 0%, #ff9387 100%);
-    background: linear-gradient(to right, #f14836 0%, #ff9387 100%)
+    background: -webkit-linear-gradient(left, #686868 0%, #ff9387 100%);
+    background: -o-linear-gradient(left, #6f6f6f 0%, #ff9387 100%);
+    background: linear-gradient(to right, #6b6b6b 0%, #ff9387 100%)
 }
 
 .single-counter.counter-color-4 .counter-shape .shape-1,
 .single-counter.counter-color-4 .counter-shape .shape-2 {
-    background-color: #f23559
+    background-color: #676767
 }
 
 .single-counter.counter-color-5 .counter-shape .shape-1,
@@ -1230,7 +1231,7 @@ p {
 }
 
 .single-gallery .gallery-icon a {
-    background-color: #f14836;
+    background-color: #6F6F6F;
     width: 120px;
     height: 120px;
     position: absolute;
@@ -1738,7 +1739,7 @@ p {
     content: '';
     width: 100%;
     height: 2px;
-    background-color: #f14836;
+    background-color: #6F6F6F;
     left: 0;
     bottom: -2px;
     opacity: 0;
@@ -1785,7 +1786,7 @@ p {
 }
 
 .our-services-tab .nav .nav-item a.active {
-    color: #f14836
+    color: #6F6F6F
 }
 
 .our-services-tab .nav .nav-item a.active::before {
@@ -1841,9 +1842,9 @@ p {
     height: 50px;
     line-height: 50px;
     text-align: center;
-    border: 1px dashed #f14836;
+    border: 1px dashed #6F6F6F;
     font-size: 36px;
-    color: #f14836
+    color: #6F6F6F
 }
 
 .single-service-2 .service-content {
@@ -1899,7 +1900,7 @@ p {
 }
 
 .single-service-3 .service-content .service-title a:hover {
-    color: #f14836
+    color: #6F6F6F
 }
 
 .single-service-3 .service-content .text {
@@ -1918,7 +1919,7 @@ p {
 }
 
 .single-service-3 .service-content .more:hover {
-    color: #f14836
+    color: #6F6F6F
 }
 
 .single-pricing {
@@ -1943,7 +1944,7 @@ p {
 
 .single-pricing .pricing-price .price .symbol {
     font-size: 18px;
-    color: #f14836;
+    color: #6F6F6F;
     font-weight: 700;
     font-family: nunito, sans-serif
 }
@@ -1997,7 +1998,7 @@ p {
 }
 
 .single-pricing.pricing-color-2 .pricing-title .btn {
-    background-color: #f14836
+    background-color: #6F6F6F
 }
 
 .single-pricing.pricing-color-3 .pricing-title .btn {
@@ -2068,7 +2069,7 @@ p {
 .testimonial-right-content .quota i {
     font-size: 130px;
     line-height: 95px;
-    color: #f14836
+    color: #6F6F6F
 }
 
 .testimonial-content-wrapper {
@@ -2120,7 +2121,7 @@ p {
 .single-testimonial .testimonial-author .author-info .author-name .name {
     font-size: 16px;
     font-weight: 700;
-    color: #f14836
+    color: #6F6F6F
 }
 
 .single-testimonial .testimonial-author .author-info .author-name .sub-title {
@@ -2229,7 +2230,7 @@ p {
 }
 
 .single-blog .blog-content .blog-title a:hover {
-    color: #f14836
+    color: #6F6F6F
 }
 
 .single-blog .blog-content .blog-author {
@@ -2247,7 +2248,7 @@ p {
 
 .single-blog .blog-content .blog-author .author-content .sub-title {
     font-size: 14px;
-    color: #f14836;
+    color: #6F6F6F;
     font-weight: 400
 }
 
@@ -2312,7 +2313,7 @@ p {
 }
 
 .contact-wrapper-form .contact-title i {
-    color: #f14836;
+    color: #6F6F6F;
     margin-right: 8px
 }
 
@@ -2418,7 +2419,7 @@ p {
 }
 
 .footer-contact .social li a:hover {
-    color: #f14836
+    color: #6F6F6F
 }
 
 .footer-copyright {
@@ -2431,7 +2432,7 @@ p {
 }
 
 .footer-copyright .text a {
-    color: #f14836
+    color: #6F6F6F
 }
 
 .back-to-top {
@@ -2444,7 +2445,7 @@ p {
     height: 45px;
     line-height: 45px;
     border-radius: 50%;
-    background-color: #f14836;
+    background-color: #6F6F6F;
     text-align: center;
     z-index: 99;
     -webkit-transition: all .3s ease-out 0s;
@@ -2457,7 +2458,7 @@ p {
 
 .back-to-top:hover {
     color: #fff;
-    background-color: #f14836
+    background-color: #6F6F6F
 }
 
 .page-banner {
@@ -2502,7 +2503,7 @@ p {
 
 .page-banner-content .page-title span {
     font-weight: 700;
-    color: #f14836;
+    color: #6F6F6F;
     display: contents
 }
 
@@ -2529,7 +2530,7 @@ p {
 
 .blog-details-content .blockquote {
     padding: 65px 50px;
-    background-color: #f14836;
+    background-color: #6F6F6F;
     position: relative;
     border-radius: 5px;
     margin-top: 45px;
@@ -2742,7 +2743,7 @@ p {
 }
 
 .single-comment-items .comment-content a:hover {
-    color: #f14836
+    color: #6F6F6F
 }
 
 .comment-reply {
@@ -2769,7 +2770,7 @@ p {
 }
 
 .blog-details-comment-form .comment-form-title i {
-    color: #f14836;
+    color: #6F6F6F;
     margin-right: 8px
 }
 
@@ -2820,7 +2821,7 @@ p {
 }
 
 .blog-category .category-title .title i {
-    color: #f14836;
+    color: #6F6F6F;
     margin-right: 5px
 }
 
@@ -2844,7 +2845,7 @@ p {
 }
 
 .blog-category .category-list ul li a:hover {
-    color: #f14836
+    color: #6F6F6F
 }
 
 .blog-category .category-list ul li a i {
@@ -2872,11 +2873,11 @@ p {
 }
 
 .blog-category .category-more a:hover {
-    color: #f14836
+    color: #6F6F6F
 }
 
 .blog-category .category-more a i {
-    color: #f14836;
+    color: #6F6F6F;
     margin-right: 5px
 }
 
@@ -2914,7 +2915,7 @@ p {
 }
 
 .blog-tag .tag-list a:hover {
-    background-color: #f14836;
+    background-color: #6F6F6F;
     color: #fff;
     border-color: #798795
 }
@@ -2937,7 +2938,7 @@ p {
 }
 
 .blog-project .project-list ul li a:hover {
-    color: #f14836
+    color: #6F6F6F
 }
 
 .blog-project .project-list ul li a span {
@@ -2961,7 +2962,7 @@ p {
 }
 
 .blog-ratting .ratting-list ul li a:hover {
-    color: #f14836
+    color: #6F6F6F
 }
 
 .blog-ratting .ratting-list ul li a span {
