--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -180,6 +180,9 @@ p {
     .section-title .title {
         font-size: 24px
     }
+    .logo-hero{
+        width: 7rem;
+    }
 }
 
 .section-title .title span {
