--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -571,7 +571,7 @@ p {
 
 .headroom--not-top {
   transform: translateY(0%);
-  position: fixed;
+  /* position: fixed; */
   z-index: 99;
   /* background-color: #fff; */
   -webkit-box-shadow: 0 20px 50px 0 rgba(0, 0, 0, 0.05);
@@ -2271,6 +2271,11 @@ p {
 
 .single-blog .blog-content .blog-author .author-image img {
   width: 65px;
+  border-radius: 50%;
+}
+
+.author-image {
+  width: 12rem;
   border-radius: 50%;
 }
 
